add pregression etape in referent dashboard
